# graphing-calculator

./: .clang-uml  CMakeLists.txt  README-en.md  README.md  run.sh  styler.sh
images/: project_diagram.puml
src/: main.cpp
src/bridge/: CMakeLists.txt  bridge_controller.cpp  bridge_controller.hpp
src/bridge/includes/: bridge_controller.hpp
src/includes/: constants.hpp  errors.hpp
src/math/: CMakeLists.txt  errors.hpp  expressions.hpp  graph_implementation.hpp  graph_implemetation.cpp  math_test.cpp  parser.cpp  parser.hpp  tokenize.cpp  tokenize.hpp
src/math/includes/: expressions.hpp  graph_implementation.hpp  parser.hpp  tokenize.hpp
src/ui/: CMakeLists.txt  button.hpp  canvas.cpp  canvas.hpp  constants.hpp  graph_view.cpp  graph_view.hpp  input_field.cpp  input_field.hpp  reset_button.cpp  reset_button.hpp  ui_controller.cpp  ui_test.cpp
src/ui/includes/: button.hpp  canvas.hpp  graph_view.hpp  reset_button.hpp  sfml_constants.hpp
